.provarCaches/00D410000011HE0EAM/objects/rstk__fcstcntl__c.object
<CustomObject>
    <description>fcstcntl__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__fcstcntl_bookingemailb__c</fullName>
        <label>Booking Request – HAZ and TEMP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcntl_bookingemailh__c</fullName>
        <label>Booking Request – HAZ only</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcntl_bookingemailn__c</fullName>
        <label>Booking Request – No HAZ or TEMP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcntl_bookingemailt__c</fullName>
        <label>Booking Request – TEMP only</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcntl_curprocseq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Optional field - set by Forecast upload process</inlineHelpText>
        <label>Current Processes Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcntl_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divfcstcntl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcntl_doiredpct__c</fullName>
        <inlineHelpText>Determines when fields in the Item Planning Review program will appear with a red background.  When the percent of DOI hits this number. the background in the grid for that date will red.</inlineHelpText>
        <label>DOI Red Threshold Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcntl_doiyellowpct__c</fullName>
        <inlineHelpText>Determines which fields in the Item Planning Review grid will appear with a yellow background.  Enterered as a whole number, when the % of DOI is between this number and the Red DOI number, the background will be yellow.</inlineHelpText>
        <label>DOI Yellow Threshold Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcntl_frstmonth__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Lookup to the Forecast Calendar</inlineHelpText>
        <label>Current First Planning Month</label>
        <referenceTo>rstk__fcstcal__c</referenceTo>
        <relationshipName>frstmnfcstcal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcntl_lastmonth__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Lookup to the Forecast Calendar</inlineHelpText>
        <label>Current Last Planning Month</label>
        <referenceTo>rstk__fcstcal__c</referenceTo>
        <relationshipName>lastmnfcstcal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fcstcntl_partslistrev__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Parts List Revision Number - auto set</inlineHelpText>
        <label>Parts List Revision Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__fcstcntl_div__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__fcstcntl_div__r.Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Forecast Control</label>
    <listViews>
        <fullName>rstk__Forecast_Control</fullName>
        <columns>NAME</columns>
        <columns>rstk__fcstcntl_frstmonth__c</columns>
        <columns>rstk__fcstcntl_lastmonth__c</columns>
        <columns>rstk__fcstcntl_div__c</columns>
        <columns>rstk__fcstcntl_partslistrev__c</columns>
        <columns>rstk__fcstcntl_curprocseq__c</columns>
        <columns>rstk__fcstcntl_doiredpct__c</columns>
        <columns>rstk__fcstcntl_doiyellowpct__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Forecast Control</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Control</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Verify_Current_Processes_Sequence</fullName>
        <active>true</active>
        <description>Verified Current Processes Sequence</description>
        <errorConditionFormula>IF( NOT ISBLANK(  rstk__fcstcntl_curprocseq__c ) , 
  IF (rstk__fcstcntl_curprocseq__c &lt; 0, true, false), 
  false)</errorConditionFormula>
        <errorMessage>Invalid Current Processes Sequence</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Verify_DOI_Red_Threshold_Pct</fullName>
        <active>true</active>
        <description>Verified DOI Red Threshold Percentage</description>
        <errorConditionFormula>IF( NOT ISBLANK( rstk__fcstcntl_doiredpct__c ) , 
  IF (rstk__fcstcntl_doiredpct__c &lt; 0, true, false), 
  false)</errorConditionFormula>
        <errorMessage>Invalid value for DOI Red Threshold Percentage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Verify_DOI_Yellow_Threshold_Pct</fullName>
        <active>true</active>
        <description>Verified DOI Yellow Threshold Percentage</description>
        <errorConditionFormula>IF( NOT ISBLANK(  rstk__fcstcntl_doiyellowpct__c ) , 
  IF (rstk__fcstcntl_doiyellowpct__c &lt; 0, true, false), 
  false)</errorConditionFormula>
        <errorMessage>Invalid value for DOI Yellow Threshold Percentage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Verify_Parts_List_Revision_Number</fullName>
        <active>true</active>
        <description>Verified Parts List Revision Number</description>
        <errorConditionFormula>IF( NOT ISBLANK( rstk__fcstcntl_partslistrev__c ) , 
  IF (rstk__fcstcntl_partslistrev__c &lt; 0, true, false), 
  false)</errorConditionFormula>
        <errorMessage>Invalid Parts List Revision Number</errorMessage>
    </validationRules>
</CustomObject>